# pylab

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
curriculum/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md  week11.md  week12.md  week13.md  week14.md
tlib/: __init__.py  ops.py
week01/: d1_creation.py  d1_promotion.py  d2_indexing.py  d2_views.py  d3_broadcast.py  d4_stable.py  d5_shapes.py  test_d1_creation.py  test_d2_indexing.py  test_d3_broadcast.py  test_d4_stable.py  test_d5_shapes.py  test_toolbox.py  toolbox.py
